# trab1-IA

./: CMakeLists.txt  README.md  main  main.cpp  result
include/: Individual.hpp  Population.hpp
src/: main.cpp
